認証系処理の整理、テンプレート整理

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
-<body>
+<body th:with="user=${#authentication.principal.loginUser}">
+	<!-- 認証済みユーザー情報にアクセス -->
 
     <h1>ログイン成功</h1>
-    <h2><span th:text="${username}" ></span> さんHello!!!!</h2>
+    <h2><span th:text="${user.username}"></span> さんHello!!!!</h2>
 
     <form th:action="@{/logout}" method="post">
     <button>Logout</button>
