--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,8 +12,8 @@
             <hr class="colorgraph">
             <p th:if="${param.error}">ログインに失敗しました</p>
             <br>
-            <input type="text"  name="username" placeholder="username" /><br>
-            <input type="password"  name="password" placeholder="password" /> <br>
+            <input type="text" name="username" placeholder="username" value="hoge"/><br>
+            <input type="password" name="password" placeholder="password" value="12345678"/> <br>
             <button name="Submit" value="Login" type="Submit">Login</button>
         </form>
         <br>
